devops/deploy/consume-binlog.deployment.yaml
# 不能有数字，3306要用“”包起来
# https://blog.csdn.net/baobaoxiannv/article/details/104632769/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-model-binlog-deployment
  labels:
    app: data-model-consume-binlog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-model-consume-binlog
  template:
    metadata:
      labels:
        app: data-model-consume-binlog
    spec:
      containers:
        - name: data-model-consume-binlog
          image: youwen21/project-data-model
          #imagePullPolicy: IfNotPresent
          imagePullPolicy: Always
          command: [ "/go/src/start_up" ]
          args: [
              "binlog-start",
              "-host=$(cmd_mysql_host)",
              "-port=$(cmd_mysql_port)",
              "-username=$(cmd_mysql_username)",
              "-password=$(cmd_mysql_password)",
              "-filter=$(cmd_filter)",
              "-server_id=$(cmd_server_id)"
          ]
