devops/deploy/web.deployment.yaml
# 不能有数字，3306要用“”包起来
# https://blog.csdn.net/baobaoxiannv/article/details/104632769/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-model-web-deployment
  labels:
    app: data-model-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: data-model-web
  template:
    metadata:
      labels:
        app: data-model-web
    spec:
      containers:
        - name: data-model-web
          image: youwen21/project-data-model
          #imagePullPolicy: IfNotPresent
          imagePullPolicy: Always
          command: [ "/go/src/start_up" ]
          args: [
              "web-start",
          ]
          ports:
            - containerPort: 8000
